<resources>
    <string name="app_name">Gravo</string>
    <string name="content_description_for_logo">GRAVO</string>
    <string name="footer">© Lunera inc.</string>
    <string name="try_again">Повторить попытку</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="email">E-mail</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="skip">Пропустить</string>
    <string name="done">Готово!</string>
    <string name="session_time_expired">Время сессии истекло</string>
    <string name="error_authorization">Неверный E-mail или пароль</string>
    <string name="check_in">Чек-ин</string>
    <string name="check_out">Чек-аут</string>
    <string name="calendar">График</string>
    <string name="settings">Настройки</string>
    <string name="settings_logout">Выход</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_close">Закрыть</string>
    <string name="dialog_logout">Выход</string>
    <string name="dialog_logout_description">При выходе будет произведен автоматический Чек-аут</string>
    <string name="dialog_left_early_description">До конца смены\n</string>
    <string name="dialog_out_of_location_description">Текущая геолокация не совпадает с заданной</string>
    <string name="dialog_early_in_title">Чек-ин</string>
    <string name="dialog_early_in_description">Вы производите чек-ин\n очень рано. Почему?</string>
    <string name="dialog_asked_early_title">Попросили</string>
    <string name="dialog_just_early_title">Просто</string>
    <string name="dialog_overtime_in_title">Чек-ин</string>
    <string name="dialog_overtime_in_description">Хоти продолжить смену в сверхурочные?</string>
    <string name="dialog_accept_overtime_title">Да</string>
    <string name="dialog_logout_title">Чек-аут</string>
    <string name="dialog_warning_title">Внимание!</string>
    <string name="dialog_ontime_title">Вы вовремя.</string>
    <string name="dialog_late_title">Вы опоздали.</string>
    <string name="dialog_ontime_description">Хорошего дня!</string>
    <string name="invalid_email_or_password">Неверный E-mail или пароль</string>
    <string name="login_field_empty">Поле логин не заполнено</string>
    <string name="login_password_fields_empty">Поля логин и пароль не заполнены</string>
    <string name="password_field_empty">Поле пароль не заполнено</string>
    <string name="login_contain_2_char">Логин должен содержать не менее 2-х символов</string>
    <string name="enable_location_provider">Включите отслеживание местоположения в настройках</string>
    <string name="error_null_location">Не удалось получить текущее местоположение</string>
    <string name="not_all_fields_are_filled">Не все поля заполнены</string>

    <string name="common_error">Что-то пошло не так :(</string>
    <string name="communicate_error">Не удалось связаться с сервером. Проверьте интернет-соединение.</string>
    <string name="not_valid_login_password">Неверный логин/пароль</string>
    <string name="not_valid_registration_code">Неверный или просроченный код регистрации</string>
    <string name="nickname_exists">Такой никнейм уже существует</string>
    <string name="nickname_is_not_the_same">Никнейм не совпадает с введенным ранее</string>
    <string name="not_employee_of_organization">Не является сотрудником организации</string>
    <string name="not_set_worker_group_or_work_place">Не установлена основная должность и/или место работы</string>

    <string name="get_ready_to_shift_notification">Скоро начнется смена.\n Будьте на рабочем месте.</string>
    <string name="out_of_location_notification">Вы находитесь за пределами рабочего места.\n Пожалуйста вернитесь или будет произведен автоматический чек-аут</string>
    <string name="return_to_place_notification">Пожалуйста вернитесь на рабочее место\n или будет произведен автоматический чек-аут.</string>
    <string name="retrying_to_connect_notification">Попытка установить соединение с сервисом.</string>
    <string name="failed_to_connect_notification">Не получилось установить соединение с сервисом.</string>
    <string name="shift_ended_notification">Смена закончилась.\n Не забудьте сделать чек-аут.</string>
    <string name="overtime_started_notification">Начались сверхурочные часы.\n Вы забыли сделать чек-аут?</string>

    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wendnesday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="saturday">сб</string>
    <string name="sunday">вс</string>
    <string name="work_time">Время работы</string>
    <string name="work_duration">Отработано</string>
    <string name="be_late">Опаздание:</string>
    <string name="can_penalty">Возможен штраф</string>
    <string name="time_to_start">До начала работы</string>
    <string name="time_to_next_shift">До следующей смены</string>
    <string name="no_data">Нет данных</string>
</resources>
