<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvMonday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/monday"
        />
    <TextView
        android:id="@+id/tvTuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/tuesday"
        />
    <TextView
        android:id="@+id/tvWednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/wendnesday"
        />
    <TextView
        android:id="@+id/tvThursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/thursday"
        />
    <TextView
        android:id="@+id/tvFriday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/friday"
        />
    <TextView
        android:id="@+id/tvSaturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:text="@string/saturday"
        />
    <TextView
        android:id="@+id/tvSunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorDayOfWeekName"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/sunday"
        />
</LinearLayout>