<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_for_logo"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"/>


                <RelativeLayout
                    android:id="@+id/rlError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRedError"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:padding="10dp"
                        android:text="@string/error_authorization"
                        android:textColor="#FFFFFF"/>

                </RelativeLayout>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingRight="6dp"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rlEtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="18dp"
                        android:paddingRight="10dp"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnAuthorization"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button_selector"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:indeterminate="true"
                    android:visibility="gone"/>


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/footer"
        android:textColor="@color/colorFooter"
        android:textSize="12sp"/>
</RelativeLayout>